# kimsufi-checker

./: .flake8  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shell.nix
kimsufichecker/: cli.py
src/kimsufichecker/: __main__.py
