[tool.poetry]
name = "kimsufichecker"
version = "1.1.0"
description = "Command line tool to monitor Kimsufi plans availability"
homepage = "https://github.com/essembeh/kimsufi-checker"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
importlib_metadata = { version = "", python = "< 3.8" }
requests = ""
colorama = ""


[tool.poetry.dev-dependencies]
black = ""
pylint = ""
pytest = ""
pytest-cov = ""
coverage = ""
rope = ""

[tool.poetry.scripts]
kimsufi-checker = 'kimsufichecker.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
