[tool.poetry]
name = "kimsufichecker"
version = "1.1.0"
description = "Command line tool to monitor Kimsufi plans availability"
homepage = "https://github.com/essembeh/kimsufi-checker"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
colorama = "^0.4.6"

[tool.poetry.scripts]
kimsufi-checker = 'kimsufichecker.cli:run'

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
